objects/PRMChannelAccount__c.object
<CustomObject>
    <fields>
        <fullName>AccountCountry__c</fullName>
        <formula>Account__r.Country__r.CountryCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PRM Channel Accounts</relationshipLabel>
        <relationshipName>PRM_Account_Channels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_CountryChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Channel</label>
        <referenceTo>CountryChannels__c</referenceTo>
        <relationshipLabel>PRM Channel Accounts</relationshipLabel>
        <relationshipName>PRM_Channel_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PRM Channel Account</label>
    <nameField>
        <displayFormat>PCA-{00000}</displayFormat>
        <label>POS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRM Channel Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MemberCountryValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($User.BypassVR__c),FIND(Account__r.Country__r.CountryCode__c,  F_PRM_CountryChannel__r.PRMCountry__r.TECH_Countries__c ) = 0)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Please select Account from selected Country / Cluster</errorMessage>
    </validationRules>
</CustomObject>